tests/fixtures/invalid/schema/missing-type-target.lgs
type Price =

checkout(amount: Price)
